@@ -1,3 +1,9 @@
+03 Jun 2003 mipsator
+ * updated makefile sample to use LIBS and CFLAGS.
+ * added CFLAGS and LIBS support in pmk_check_config().
+ * added LIBS support in pmk_check_lib().
+ * fixed initialisation of the buffer in hash_append().
+
 02 Jun 2003 mipsator
  * improved hash_append().
  * updated hash_test.c to test appending function.
